--- a/index.html
+++ b/index.html
@@ -79,36 +79,43 @@
         <ul class="ul-side-menu">
           <li class="li-side-menu">
             <a href="#" class="link-side-menu active">
+              <img src="./img/icon_menu/1_active.png">
               <p>โปรโมชั่น</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/2.png">
               <p>เมนูแนะนำ</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/3.png">
               <p>ของคาว</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/4.png">
               <p>ของว่าง</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/5.png">
               <p>ทานเล่น</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/6.png">
               <p>เครื่องดิ่ม</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
+              <img src="./img/icon_menu/7.png">
               <p>อื่นๆ</p>
             </a>
           </li>
