make svg hover and acitve

--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
             </a>
           </li>
           <li class="li-side-menu">
-            <a href="#" class="link-side-menu">
-              <img src="./img/icon_menu/2.png">
+            <a href="#" class="link-side-menu active">
+              <img class="svg" src="./img/svg/icon01.svg">
               <p>เมนูแนะนำ</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
-              <img src="./img/icon_menu/3.png">
+              <img class="svg" src="./img/svg/icon02.svg">
               <p>ของคาว</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
-              <img src="./img/icon_menu/4.png">
+              <img class="svg" src="./img/svg/icon03.svg">
               <p>ของว่าง</p>
             </a>
           </li>
@@ -499,6 +499,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/svg.js"></script>
   <script type="text/javascript"></script>
 
 </body>
