add data attr for make color from html

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu active">
-              <img class="svg" src="./img/svg/icon01.svg">
+              <img class="svg" src="./img/svg/icon01.svg" data-color="#ff0000">
               <p>เมนูแนะนำ</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
-              <img class="svg" src="./img/svg/icon02.svg">
+              <img class="svg" src="./img/svg/icon02.svg" data-color="#00ff00">
               <p>ของคาว</p>
             </a>
           </li>
           <li class="li-side-menu">
             <a href="#" class="link-side-menu">
-              <img class="svg" src="./img/svg/icon03.svg">
+              <img class="svg" src="./img/svg/icon03.svg" data-color="#0000ff">
               <p>ของว่าง</p>
             </a>
           </li>
