--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button class="btn btn-info-shop" data-toggle="modal" data-target="#detail_info">
       <img src="./img/icon_info_shop.png">
     </button>
-    <div class="label-switch-lang">
+    <div class="label-switch-lang" data-color="#ff0000">
       <label class="switch" for="switchlang">
         <input type="checkbox" id="switchlang" />
         <div class="slider round"></div>
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <main class="">
-    <div id="carousel-emenu" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="carousel-emenu" class="carousel slide carousel-fade" data-ride="carousel" data-color="#ff0000">
       <!--Indicators-->
       <ol class="carousel-indicators">
         <li data-target="#carousel-emenu" data-slide-to="0" class="active"></li>
@@ -75,7 +75,7 @@
       <!--/.Controls-->
     </div>
     <div class="main-page">
-      <div class="side-menu">
+      <div class="side-menu" data-color="#00ff00">
         <ul class="ul-side-menu">
           <li class="li-side-menu">
             <a href="#" class="link-side-menu active">
@@ -499,6 +499,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/core.js"></script>
   <script type="text/javascript" src="js/svg.js"></script>
   <script type="text/javascript"></script>
 
